# tvemoves

./: .gitignore  README.md  configuration.yaml  devenv.nix  environment.yml  example.ipynb  experiment.py  grid.py  mechanical_step.py  mypy.ini  pyproject.toml  requirements.txt  simple_model.py  simulation.py  tensor.py  tensors.py  test_requirements.txt
.idx/: dev.nix
src/tvemoves_rufbad/: bell_finite_element.py  domain.py  grid.py  helpers.py  integrators.py  interpolation.py  mechanical_step.py  quadrature_rules.py  shape_function.py  simulation.py  tensors.py  thermal_step.py  utils.py
tests/: helpers.py  test_bell_finite_element.py  test_domain.py  test_grid.py  test_integrators.py  test_interpolation.py  test_quadrature_rules.py  test_simulation.py  test_tensors.py
